WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118342
H&R Block 2010 Help window can not be reopened.
https://bugs.webkit.org/show_bug.cgi?id=118342
Summary
H&R Block 2010 Help window can not be reopened.
alan
Reported
2013-07-03 00:36:42 PDT
After closing the H&R Block 2010 Help window it can not be opened again.
Attachments
Patch
(4.89 KB, patch)
2013-07-03 00:59 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-07-03 00:37:03 PDT
<
rdar://problem/13936550
>
alan
Comment 2
2013-07-03 00:59:46 PDT
Created
attachment 205973
[details]
Patch
WebKit Commit Bot
Comment 3
2013-07-03 03:14:18 PDT
Comment on
attachment 205973
[details]
Patch Clearing flags on attachment: 205973 Committed
r152348
: <
http://trac.webkit.org/changeset/152348
>
WebKit Commit Bot
Comment 4
2013-07-03 03:14:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug