H&R Block 2010 Help window can not be reopened. https://bugs.webkit.org/show_bug.cgi?id=118342

Patch by Zalan Bujtas <zalan@apple.com> on 2013-07-03
Reviewed by Antti Koivisto.

http://trac.webkit.org/changeset/118916 changed the window.focus() behaviour so that
only the opener can (re)focus() a particular window.
H&R Block app relies on the relaxed window.focus() rules.

Source/WebCore:

* WebCore.exp.in:
* platform/RuntimeApplicationChecks.cpp:
(WebCore::applicationIsHRBlock):
* platform/RuntimeApplicationChecks.h:

Source/WebKit/mac:

* WebView/WebView.mm:
(shouldRestrictWindowFocus):
(-[WebView _preferencesChanged:]):

Canonical link: https://commits.webkit.org/136356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152348 268f45cc-cd09-0410-ab3c-d52691b4dbfc