Source/WebKit/mac/WebView/WebView.mm
@@ -623,6 +623,11 @@ static bool shouldEnableLoadDeferring()
     return !applicationIsAdobeInstaller();
 }
 
+static bool shouldRestrictWindowFocus()
+{
+    return !applicationIsHRBlock();
+}
+
 - (void)_dispatchPendingLoadRequests
 {
     resourceLoadScheduler()->servePendingRequests();
@@ -1499,6 +1504,7 @@ static bool needsSelfRetainWhileLoadingQuirk()
     settings->setWebGLEnabled([preferences webGLEnabled]);
     settings->setAccelerated2dCanvasEnabled([preferences accelerated2dCanvasEnabled]);
     settings->setLoadDeferringEnabled(shouldEnableLoadDeferring());
+    settings->setWindowFocusRestricted(shouldRestrictWindowFocus());
     settings->setFrameFlatteningEnabled([preferences isFrameFlatteningEnabled]);
     settings->setSpatialNavigationEnabled([preferences isSpatialNavigationEnabled]);
     settings->setPaginateDuringLayoutEnabled([preferences paginateDuringLayoutEnabled]);
